static/code-examples/egress-access-control/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otterize-tutorial-egress-access
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace:  otterize-tutorial-egress-access
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
          image: 'otterize/egress-tutorial-frontend'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace:  otterize-tutorial-egress-access
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          imagePullPolicy: Always
          image: 'otterize/egress-tutorial-backend'
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: otterize-tutorial-egress-access
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
