static/code-examples/egress-access-control/default-deny-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
      - ports:
        - protocol: UDP
          port: 53
